infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  # This is where deployment know what pod(s) to manage 
  # Must match matchLabels & Service component selector label
  template:
    metadata:
      labels: 
        app: expiration
    # This is where we tell the pod how to behave
    spec:
      containers:
      - name: expiration
       image: daochat/expiration:latest
        resources: {}
