infra/k8s/auth-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
    # Pods can run multiple containers that are tightly coupled
    # https://kubernetes.io/docs/concepts/workloads/pods/
      containers:
        - name: auth-mongo
          image: mongo
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017 # default mongo port which listens to
      targetPort: 27017
