infra/k8s/orders-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  # This is where deployment know what pod(s) to manage 
  # Must match matchLabels & Service component selector label
  template:
    metadata:
      labels: 
        app: orders
    # This is where we tell the pod how to behave
    spec:
      containers:
      - name: orders
       image: daochat/orders:latest
        # NOTE: create secret object first before setting it up in here
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  type: ClusterIP # optional, ClusterIP will still be the default
  selector:
    app: orders
  ports:
  - name: orders
    protocol: TCP
    port: 3000
    targetPort: 3000
