infra/k8s/payments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  # This is where deployment know what pod(s) to manage 
  # Must match matchLabels & Service component selector label
  template:
    metadata:
      labels: 
        app: payments
    # This is where we tell the pod how to behave
    spec:
      containers:
      - name: payments
       image: daochat/payments:latest
        # NOTE: create secret object first before setting it up in here
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  type: ClusterIP # optional, ClusterIP will still be the default
  selector:
    app: payments
  ports:
  - name: payments
    protocol: TCP
    port: 3000
    targetPort: 3000
