infra/k8s/tickets-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  # This is where deployment know what pod(s) to manage 
  # Must match matchLabels & Service component selector label
  template:
    metadata:
      labels: 
        app: tickets
    # This is where we tell the pod how to behave
    spec:
      containers:
      - name: tickets
        image: barryblando/tickets:latest
        # NOTE: create secret object first before setting it up in here
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  type: ClusterIP # optional, ClusterIP will still be the default
  selector:
    app: tickets
  ports:
  - name: tickets
    protocol: TCP
    port: 3000
    targetPort: 3000
